# recollect

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LLAMAHUB.md  Makefile  PUBLISHING.md  PYPI_SETUP.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.html  production-and-scale.md  showcase.html  styles.css
docs/integrations/: langchain.md  llama-index.md
examples/: chat_with_memory.py  fastapi_memory_service.py  langchain_travel_agent.py  langgraph_memory_node.py  llamaindex_chat_engine.py
scripts/: publish_local.sh
src/recollect/: __init__.py  async_memory.py  cli.py  config.py  embeddings.py  extraction.py  memory.py  memory_core.py  py.typed  retrieval.py  types.py
src/recollect/integrations/: __init__.py
src/recollect/integrations/langchain/: __init__.py  runnable.py  tools.py
src/recollect/stores/: __init__.py  base.py  chroma_store.py  factory.py  in_memory_store.py  pgvector_store.py  qdrant_store.py  sqlite_store.py
tests/: test_async_memory.py  test_langchain_integration.py  test_llamaindex_integration.py  test_memory.py  test_retrieval.py
