[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recollect"
version = "0.1.0"
description = "Long-term memory layer for AI agents and assistants"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Cobus Greyling" }]
dependencies = [
    "pydantic>=2.7",
    "openai>=1.40",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["recollect"]

[tool.hatch.build.targets.wheel.force-include]
"src/recollect" = "recollect"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"